# local-AI-AGENT-demo-without-using-any-LLM-api

./: README.md
AI agent/: readme.md
AI agent/agent/: __init__.py  cli.py  engine_client.py  workflow.py
AI agent/engine/: CMakeLists.txt
AI agent/engine/src/: main.cpp
AI agent/examples/demo_cpp/: README.md  build.sh  demo  main.cpp
AI agent/examples/demo_cpp/demo.dSYM/Contents/Resources/DWARF/: demo
